openshift-config/ActiveMQ/deploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    io.kompose.service: activemq
  name: activemq
spec:
  replicas: 1
  selector:
    io.kompose.service: activemq
  strategy:
    resources: {}
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 60
      intervalSeconds: 60
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: activemq
    spec:
      containers:
      - image: ${DOCKERREG}/${PROJECTNAME}/activemq:${MQVERSION}
        name: activemq
        ports:
        - containerPort: 61616
        - containerPort: 8161
        resources: {}
        volumeMounts:
        - mountPath: /data/activemq
          name: activemq-claim0
        - mountPath: /var/log/activemq
          name: activemq-claim1
      restartPolicy: Always
      volumes:
      - name: activemq-claim0
        persistentVolumeClaim:
          claimName: activemq-claim0
      - name: activemq-claim1
        persistentVolumeClaim:
          claimName: activemq-claim1
  test: false
  triggers:
  - type: ConfigChange
status: {}
